# Wave-Desktop

./: .prettierignore  LICENSE  README.md  drizzle.config.ts  global.d.ts  index.html  overlay.html  package-lock.json  package.json  tailwind.config.js  tray.html  tsconfig.json  vite.config.ts
.cursor/rules/: frontend.mdc  tauri.mdc
.github/workflows/: arm.yml  build.yml  release.yml
environment/: aptPackages.txt
scripts/: shadcnui.ts
src/: App.tsx  global.css  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/migrations/meta/: 0000_snapshot.json  _journal.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  main.tsx
src/app/layout/: Footer.tsx  Main.tsx  Sidebar.tsx  Titlebar.tsx
src/app/main/: App.tsx  main.tsx
src/app/overlay/: App.tsx  main.tsx
src/app/pages/: Artists.tsx  FastUpload.tsx  Favorites.tsx  Settings.tsx  Songs.tsx
src/components/core/: ErrorBoundary.tsx
src/components/ui/: Accordion.tsx  Button.tsx  Checkbox.tsx  Command.tsx  ContextMenu.tsx  DataTable.tsx  Dialog.tsx  DropdownMenu.tsx  Form.tsx  Icon.tsx  IconButton.tsx  Image.tsx  Input.tsx  Label.tsx  Linkify.tsx  List.tsx  Loader.tsx  Marquee.tsx  Popover.tsx  (+15 more)
src/contexts/: ThemeContext.tsx
src/database/: client.ts  driver.ts  migrate.ts  schema.ts
src/hooks/: useSplashScreen.ts
src/i18n/: locales.ts  types.ts
src/main/: App.tsx  main.tsx
src/overlay/: App.tsx  main.tsx
src/stores/: useSettingsStore.ts
src/utils/: format.ts  types.d.ts
(+80 files in other folders)
